# shef-image-library

./: CMakeLists.txt  demo.cc  downsampler.h  image.cc  image.h  opencv_downsampler.cc  opencv_downsampler.h  opencv_utils.cc  opencv_utils.h  run_demo.sh  shef_downsampler.cc  shef_downsampler.h
